# qcaml

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  dune-project  qcaml.opam
.github/workflows/: pages.yml  test.yml
examples/: apply_gate.ml  bell_state.ml  dune  interference.ml  measure.ml  rotation.ml  superposition.ml  try_register.ml
src/: complex.ml  complex.mli  dune  gate.ml  gate.mli  measurement.ml  measurement.mli  register.ml  register.mli  utils.ml  utils.mli  visualization.ml  visualization.mli
tests/: dune  test_complex.ml  test_gate.ml  test_measurement.ml  test_register.ml
