(executable
 (public_name init_qubit_exe)
 (name init_qubit)
 (libraries quantum))

(executable
 (public_name apply_gate_exe)
 (name apply_gate)
 (libraries quantum))

(executable
 (public_name statistics_exe)
 (name statistics)
 (libraries quantum))

(executable
 (public_name bloch_exe)
 (name bloch_sphere)
 (libraries quantum))

(executable
 (public_name test_measurement_exe)
 (name test_measurement)
 (libraries quantum))
