(test
 (name test_complex)
 (modules test_complex)
 (libraries quantum alcotest)
 (instrumentation (backend bisect_ppx)))

(test
 (name test_register)
 (modules test_register)
 (libraries quantum alcotest)
 (instrumentation (backend bisect_ppx)))

(test
 (name test_gate)
 (modules test_gate)
 (libraries quantum alcotest)
 (instrumentation (backend bisect_ppx)))

(test
 (name test_measurement)
 (modules test_measurement)
 (libraries quantum alcotest)
 (instrumentation (backend bisect_ppx)))
